deployment/chat-ui/route-chat-ui.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: chat-ui
  annotations:
    haproxy.router.openshift.io/timeout: 600s
spec:
  to:
    kind: Service
    name: chat-ui
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
